--- a/pages/liston.html
+++ b/pages/liston.html
@@ -1,20 +1,20 @@
 ---
-layout: home
-permalink: tags
-title: Dataporn
+layout: page
+permalink: liston
+title: Liston
 ---
 
-<div class="f4 mb4 center measure lh-copy">
-  <div class="courier lh-copy">
+<div class="">
+  <div class="">
     {% for tag in site.tags %}
     <a href="#{{ tag[0] | slugify }}" class="">{{ tag[0] }}</a>
     {% endfor %}
   </div>
-  <div class="f4 mb4 center measure lh-copy">
+  <div class="">
     {% for tag in site.tags  %}
     <h2 class="ttu" id="{{ tag[0] }}">#{{ tag[0] }}</h2>
       {% for post in tag[1] %}
-          <a class="f4 dib ph2 mv1 dim" href="{{ site.baseurl }}{{ post.url }}">
+          <a class="" href="{{ site.baseurl }}{{ post.url }}">
           {{ post.title }}
           </a>
 
