--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+image: /assets/img/photo/mosconi.png
 ---
 
 <style type="text/css" media="screen">
@@ -17,8 +18,9 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>404 <a href="/">torna indrio</a></h1>
+  <img src="/assets/img/photo/mosconi.png" alt="mosconi">
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Casso... :-(</strong></p>
+  <p>Ea pagina che doveva esserghe, no ghe xé.</p>
 </div>
